improvised exercise-1 from week-2

--- a/Week-2/exercise-2_1/index.html
+++ b/Week-2/exercise-2_1/index.html
@@ -111,12 +111,14 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="input" ><input type="checkbox" name="agreement" id="agreement"><label for="agreement" required>I agree to the <a href="" color="red" >terms and conditions</a></label></div>
-                    <div class="input" ><input type="submit" value="SignUp"></div>
+                    <div class="input" ><input type="checkbox" name="agreement" id="agreement"><label for="agreement" required>I agree to the <a href="#" color="red" >terms and conditions</a></label></div>
+                    <div class="input" ><input type="submit" id="submit" value="SignUp"></div>
                 </form>
             </div>
         </center>
     </main>
-    <footer></footer>
+    <footer>
+        <center>&copy; Created By <cite><a href="https://github.com/neerajsinghsarathe">Neeraj Singh Sarathe</a></cite></center>
+    </footer>
 </body>
 </html>
