--- a/Week-2/exercise-2_2/index.html
+++ b/Week-2/exercise-2_2/index.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <div class="main">
+            <div class="flex-column" >
+                <div class="square" id="red" ></div>
+                <div class="square" id="yellow" ></div>
+            </div>
+            <div style="position: inherit; left: 10%; font-size: 40px;">Hi!</div>
+            <div class="flex-column" >
+                <div class="square" id="blue" ></div>
+                <div class="square" id="green" ></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
